--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,8 +1,8 @@
 :root {
   --primary: hsl(39, 30%, 66%);
   --primary-dark: hsl(39, 30%, 44%);
-  --primary-grad: linear-gradient(to left top, #ffcc3d, #ffc645, #ffc04c, #ffbb52, #ffb659);
-  --primary-grad-highlight: linear-gradient(to right bottom, #ffcc16, #fcc127, #f8b633, #f2ac3c, #f3ad52);
+  --primary-grad: linear-gradient(to left top, #beaf84, #b39f71, #a98e5f, #9e7e4d, #946e3d);
+  --primary-grad-highlight: linear-gradient(to left top, #d5c598, #c9b588, #bda579, #b2956a, #a6865c);
 }
 
 *, * * {
@@ -50,20 +50,19 @@ h1, h2 {
 
 header.hero {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-content: center;
   align-items: center;
   flex-flow: row wrap;
-  padding: 5px;
+  padding: .5em;
   background: var(--primary);
-  min-height: 130px;
   width: 100%;
 }
 
 header.hero > h1 {
   font-family: 'Righteous', 'Times New Roman', Times, serif;
   font-size: 3.8em;
-  margin: .15em 1em;
+  margin: .15em;
 }
 
 section.authbtn {
